--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
               <span style="width: 35%" data-progress="35%"></span>
             </div>
           </div>
+                    <div class="lang-container">
+            <h3>gsap</h3>
+            <div class="lang">
+              <span style="width: 5%" data-progress="5%"></span>
+            </div>
+          </div>
           <div class="lang-container">
             <h3>php</h3>
             <div class="lang">
