--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="images/home.jpg" alt="" />
+                <img src="images/portfolio4.jpg" alt="" />
               </div>
-              <a href="portfolio.html"><p>test2</p></a>
+              <a href="https://beshoymokhtar.github.io/GSAP-Testing/"><p>test2</p></a>
             </div>
           </div>
           <p>
