--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <div class="image">
                 <img src="images/portfolio4.jpg" alt="" />
               </div>
-              <a href="https://beshoymokhtar.github.io/GSAP-Testing/"><p>test2</p></a>
+              <a target="_blank" href="https://beshoymokhtar.github.io/GSAP-Testing/"><p>GSAP Testing</p></a>
             </div>
           </div>
           <p>
