--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,16 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="images/home.jpg" alt="" />
+                <img src="images/portfolio4.jpg" alt="" />
               </div>
-              <a href="portfolio.html"><p>test2</p></a>
+              <a target="_blank" href="https://beshoymokhtar.github.io/GSAP-Testing/"><p>GSAP Testing</p></a>
             </div>
           </div>
+          <p>
+            note: to open portfolio in separate page click the title <br />
+            (portfolio word inside the section not the header nav bar) <br />
+            and to open each project click it's name inside this section here
+          </p>
         </div>
       </div>
     </div>
