--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     </div>
     <div class="portfolio" id="portfolio">
       <div class="container">
-        <h1 class="section-title">
+        <h1 class="section-title">Portfolio
         </h1>
         <div class="section-content">
           <div class="images">
